--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,4 @@
-/* pages/map/map.wxss */
+/* pages/indx/index.wxss */
 page{
     height:100%;
 }
@@ -6,3 +6,50 @@ page{
     width: 100%;
     height: 100%;
 }
+
+.cover-view-contain{
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    overflow: hidden;
+}
+/* cover-view-1 */
+.cover-view-1{
+    position: relative;
+    top:89%;
+    padding-left: 4%;
+    width: 16%;
+}
+
+/* cover-view-2 */
+.cover-view-2{
+    position: relative;
+    padding-left:6%;
+    top:89%;
+    width:14%;    
+}
+
+/* cover-view-middle */
+.cover-view-middle{
+    position: relative;    
+    top:89%;    
+    width:60%;
+}
+
+.cover-image-1 {
+    width:48rpx;
+    height:48rpx;
+    background: #4e8a63;
+    margin-bottom: 12rpx;
+    border-radius: 50%;
+    padding:10rpx;
+}
+.cover-image-2 {
+    width:68rpx;
+    height:68rpx;
+}
+
+
+
+
